# docker-shell

./: LICENSE  README.md  pyproject.toml
docker_shell/: docker_utils.py  main.py  text_utils.py
docker_shell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_docker_shell.py
